Sat Jul 26 18:33:42 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Converted to use XO_LIB_XAPIAN.

Fri Jul 25 11:02:43 2003  James Aylett  <james@tartarus.org>

	* {tcl8,guile}/util.i: convert typemaps to SWIG 1.3 style

Fri Jul 25 11:01:15 2003  James Aylett  <james@tartarus.org>

	* python/Makefile.am: add -lomqueryparser to complete link

Tue Jul 15 13:50:25 2003  James Aylett  <james@tartarus.org>

	* [langdir]/Makefile.am: use -I$(srcdir) not -I. so VPATH
	  builds work again

Fri Jul 11 15:10:27 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Version 0.7.2.

Fri Jul 11 14:53:35 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am,configure.in: Include code for partly done guile and
	  tcl8 bindings in the distribution - it may inspire somebody to
	  finish them off.
	* guile/Makefile.am,tcl8/Makefile.am: Removed -shadow from swig
	  invocation.
	* php4/Makefile.am: Fixed not to build subproject every time.

Fri Jul 11 14:42:42 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Added check for location of Xapian installation.
	* guile/Makefile.am,php4/Makefile.am,python/Makefile.am,
	  tcl8/Makefile.am: Added -I for Xapian.

Fri Jul 11 14:27:04 BST 2003  Olly Betts <olly@survex.com>

	* Moved bindings out of xapian-core into their own module.