@@ -13,6 +13,8 @@ install-hook:
 all-local: xapian/php_xapian.la
 
 xapian/php_xapian.la: xapian/configure
+	: # FIXME: this isn't going to work with an uninstalled libxapian
+	: # The whole "--with-xapian" concept is deeply flawed really
 	cd xapian &&\
 	 ./configure --with-xapian="`echo $(XAPIAN_CXXFLAGS)|sed 's!^-I!!;s!/include$$!!'`" &&\
 	 $(MAKE)
@@ -22,6 +24,6 @@ xapian/configure: xapian/xapian_wrap.cpp xapian/Makefile.in xapian/config.m4 xap
 
 xapian/xapian_wrap.cpp xapian/Makefile.in xapian/config.m4 xapian/php_xapian.h xapian/xapian.php: ../xapian.i util.i
 	test -d xapian || mkdir xapian
-	$(SWIG) -I$(srcdir) $(XAPIAN_CXXFLAGS) -c++ -php4 -phpfull -withlibs "xapian omqueryparser" -withincs "xapian.h xapian/queryparser.h" -noproxy -o xapian/xapian_wrap.cpp $(srcdir)/../xapian.i
+	$(SWIG) -I$(srcdir) $(XAPIAN_CXXFLAGS) -c++ -php4 -phpfull -withlibs "xapian xapianqueryparser" -withincs "xapian.h xapian/queryparser.h" -noproxy -o xapian/xapian_wrap.cpp $(srcdir)/../xapian.i
 
 CLEANFILES = $(BUILT_SOURCES)
